--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipython>=8.30.0",
     "matplotlib>=3.9.3",
     "numpy>=2.1.3",
+    "pyinstaller>=6.13.0",
     "pyside6>=6.8.1.1",
     "pytest>=8.3.4",
 ]
