--- a/.github/workflows/PyInstaller_Mac.yml
+++ b/.github/workflows/PyInstaller_Mac.yml
@@ -15,9 +15,9 @@ jobs:
         # - This file will be used to create executable.
         # - If .py: Generated spec file will also be uploaded as artifact
   
-        spec: src/akari/gui.spec # default is 
+        spec: 'src/akari/gui.spec' # default is 
         # path of your requirements.txt file
-        requirements: requirements.txt # optional, default is 
+        requirements: 'requirements.txt' # optional, default is 
         # Options to set for pyinstaller command Ex: options: '--onedir, -F'       (seperated by comma and space)
         # - Supported options: Check readme
       
